--- a/MPC.html
+++ b/MPC.html
@@ -16,7 +16,7 @@
             <li>Course duration: 4Yrs</li>
             <li>Obtaining degree: B.tech/B.E</li>
            <li> <a href="https://www.shiksha.com/engineering/ranking/top-engineering-colleges-in-india/44-2-0-0-0" target="_blank">Refer here for top indian colleges for engineering </a></li>
-           <li> <a href="http://127.0.0.1:3000/engineering.html" target="_blank">Here's your RoadMap</a></li>
+           <li> <a href="https://harshikaaaaaa.github.io/CareerNavigator/engineering.html" target="_blank">Here's your RoadMap</a></li>
     </div>
         
          <div>  
@@ -27,7 +27,7 @@
             <li> Course duration: 3Yrs
                <li>Obtaining degree: BSc</li> 
               <li><a href="https://collegedunia.com/bsc-colleges" target="_blank">Refer here for top indian colleges for BSc </a></li>
-              <li><a href="http://127.0.0.1:3000/BSc.html" target="_blank">Here's your RoadMap</a></li>
+              <li><a href="https://harshikaaaaaa.github.io/CareerNavigator/BSc.html" target="_blank">Here's your RoadMap</a></li>
             </div>
         <div>
             
@@ -36,7 +36,7 @@
             <li>Course duration: 3Yrs</li>
         <li> Obtaining degree: BCom</li>
         <li><a href="https://collegedunia.com/bcom-colleges" target="_blank">Refer here for top indian colleges for BCom</a></li>
-        <li><a href="http://127.0.0.1:3000/BCom.html" target="_blank">Here's your RoadMap</a></li>
+        <li><a href="https://harshikaaaaaa.github.io/CareerNavigator/BCom.html" target="_blank">Here's your RoadMap</a></li>
         </div>
         <div>
             <h3>4.NDA</h3>
@@ -47,7 +47,7 @@
                     <li>Non-tech(Ground duty)</li></ul></ul>
            <li><a href="https://en.wikipedia.org/wiki/National_Defence_Academy_(India)" target="_blank">Refer here to know more about NDA and it's courses</a></li> 
            <li>
-            <a href="http://127.0.0.1:3000/NDA.html" target="_blank">Here's your RoadMap</a>
+            <a href="https://harshikaaaaaa.github.io/CareerNavigator/NDA.html" target="_blank">Here's your RoadMap</a>
            </li>
         </div>
         <div>
@@ -56,7 +56,7 @@
             <li> Course duration: 5Yrs integrated</li>
             <li>Obtaining degree: MSc.</li>
            <li> <a href="https://www.shiksha.com/science/colleges/m-sc-colleges-india" target="_blank">Refer here for top indian colleges for MSc</a></li>
-       <li> <a href="http://127.0.0.1:3000/MSc.html" target="_blank">Here's your RoadMap</a> </li>
+       <li> <a href="https://harshikaaaaaa.github.io/CareerNavigator/MSc.html" target="_blank">Here's your RoadMap</a> </li>
         </div>
         <div>
             <h3>6.BBA</h3>
@@ -64,7 +64,7 @@
             <li>Course duration: 3Yrs</li>
             <li>Obtaining degree: BBA </li>
             <li><a href="https://collegedunia.com/bba-colleges" target="_blank">Refer here for top indian colleges for BBA</a></li>
-            <li><a href="http://127.0.0.1:3000/BBA.html" target="_blank">Here's your RoadMap</a></li>
+            <li><a href="https://harshikaaaaaa.github.io/CareerNavigator/BBA.html" target="_blank">Here's your RoadMap</a></li>
         </div>
         <div>
             <h3>7.B.Arch</h3>
@@ -78,7 +78,7 @@
 
 <li><a href="https://www.collegesearch.in/architecture-colleges-india" target="_blank">Refer here for top indian colleges for B.Arch</a></li>
 <li>
-    <a href="http://127.0.0.1:3000/BArch.html" target="_blank">Here's your RoadMap</a>
+    <a href="https://harshikaaaaaa.github.io/CareerNavigator/BArch.html" target="_blank">Here's your RoadMap</a>
 </li>
         </div>
     </div>
