--- a/BiPC.html
+++ b/BiPC.html
@@ -16,7 +16,7 @@
         <a href="https://www.shiksha.com/medicine-health-sciences/ranking/top-medical-colleges-in-india/100-2-0-0-0" target="_blank"> Refer here for top medical colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/MBBS.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/MBBS.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
     <h3>2. BDS (Bachelor of Dental Surgery)</h3>
@@ -28,7 +28,7 @@
         <a href="https://www.shiksha.com/medicine-health-sciences/dental/ranking/top-dental-colleges-in-india/119-2-0-0-0" target="_blank">Refer here for top BDS colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BDS.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BDS.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -41,7 +41,7 @@
         <a href="https://www.shiksha.com/bams-bachelor-of-ayurvedic-medicine-and-surgery-chp" target="_blank">Refer here for top BAMS colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bams.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bams.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -55,7 +55,7 @@
             <a href="https://www.shiksha.com/medicine-health-sciences/alternative-medicine/colleges/homeopathy-colleges-india" target="_blank">Refer here for top BHMS colleges in India</a>
         </li>
         <li>
-            <a href="http://127.0.0.1:3000/Bhms.html" target="_blank">Here's your RoadMap</a>
+            <a href="https://harshikaaaaaa.github.io/CareerNavigator/Bhms.html" target="_blank">Here's your RoadMap</a>
         </li>
     </div>
 
@@ -69,7 +69,7 @@
         <a href="https://www.shiksha.com/science/articles/top-veterinary-science-universities-institutes-in-india-blogId-14744" target="_blank">Refer here for top BVSC&AH colleges in India </a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bvsc.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bvsc.html" target="_blank">Here's your RoadMap</a>
 
     </li>
     </div>
@@ -84,7 +84,7 @@
     <a href="https://www.shiksha.com/medicine-health-sciences/pharmacy/ranking/top-pharmacy-colleges-in-india/117-2-0-0-0" target="_blank">Refer here for top B.Pharmacy colleges in India</a>
 </li>
 <li>
-    <a href="http://127.0.0.1:3000/Bpharm.html" target="_blank">Here's your RoadMap</a>
+    <a href="https://harshikaaaaaa.github.io/CareerNavigator/Bpharm.html" target="_blank">Here's your RoadMap</a>
 </li>
     </div>
 
@@ -98,7 +98,7 @@
         <a href="https://www.shiksha.com/science/colleges/b-sc-colleges-india" target="_blank">Refer here for top BSc Nursing colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BscN.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BscN.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -112,7 +112,7 @@
         <a href="https://www.shiksha.com/medicine-health-sciences/physiotherapy/colleges/colleges-india" target="_blank">Refer here for top BPT colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BPT.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BPT.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 </body>
