--- a/HEC.html
+++ b/HEC.html
@@ -17,7 +17,7 @@
         <a href="https://www.shiksha.com/medicine-health-sciences/physiotherapy/colleges/colleges-india" target="_blank">Refer here for top BA colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BA.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BA.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -31,7 +31,7 @@
         <a href="https://www.shiksha.com/bba/ranking/top-bba-colleges-in-india/93-2-0-0-0" target="_blank">Refer here for top BBA colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BBA.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BBA.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -45,7 +45,7 @@
         <a href="https://www.shiksha.com/accounting-commerce/ranking/top-commerce-colleges-in-india/97-2-0-0-0" target="_blank">Refer here for top BCom colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BCom.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BCom.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -60,7 +60,7 @@
 
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bbm.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bbm.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -74,7 +74,7 @@
         <a href="https://www.shiksha.com/hospitality-travel/colleges/bhm-college-india" target="_blank">Refer here for top BHM colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bhm.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bhm.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -88,7 +88,7 @@
         <a href="https://www.shiksha.com/law/colleges/b-a-ll-b-colleges-india" target="_blank">Refer here for top BA.llb colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/llb.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/llb.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -102,7 +102,7 @@
         <a href="https://www.shiksha.com/teaching-education/colleges/b-ed-colleges-india" target="_blank">Refer here for top B.Ed colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BEd.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BEd.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -116,7 +116,7 @@
         <a href="https://www.shiksha.com/arts-fine-visual-performing/colleges/bfa-colleges-india" target="_blank">Refer here for top BFA colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bfa.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bfa.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -130,7 +130,7 @@
                 <a href="https://www.shiksha.com/hospitality-travel/colleges/bhmct-college-india" target="_blank">Refer here for top BHMCT colleges in India</a>
             </li>
             <li>
-                <a href="http://127.0.0.1:3000/bhmct.html" target="_blank">Here's your RoadMap</a>
+                <a href="https://harshikaaaaaa.github.io/CareerNavigator/bhmct.html" target="_blank">Here's your RoadMap</a>
             </li>
     </div>
 
@@ -144,7 +144,7 @@
             <a href="https://www.shiksha.com/humanities-social-sciences/library-information-science/colleges/b-lib-sc-colleges-india" target="_blank">Refer here for top BLibSc colleges in India</a>
         </li>
         <li>
-            <a href="http://127.0.0.1:3000/blibsc.html" target="_blank">Here's your RoadMap</a>
+            <a href="https://harshikaaaaaa.github.io/CareerNavigator/blibsc.html" target="_blank">Here's your RoadMap</a>
         </li>
     </div>
 
@@ -158,7 +158,7 @@
         <a href="https://www.shiksha.com/humanities-social-sciences/colleges/bsw-colleges-india" target="_blank">Refer here for top BSW colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bsw.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bsw.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 
@@ -172,7 +172,7 @@
         <a href="https://www.shiksha.com/humanities-social-sciences/colleges/b-a-colleges-india" target="_blank">Refer here for top BaHumanities college in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BA.html" target="_blank">Here's your RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BA.html" target="_blank">Here's your RoadMap</a>
     </li>
     </div>
 </body>
