--- a/CEC.html
+++ b/CEC.html
@@ -17,7 +17,7 @@
         <a href="https://www.shiksha.com/accounting-commerce/ranking/top-commerce-colleges-in-india/97-2-0-0-0" target="_blank">Refer here for top BCom colleges in India </a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BCom.html" target="_blank">Here's a RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BCom.html" target="_blank">Here's a RoadMap</a>
     </li>
     </div>
 
@@ -31,7 +31,7 @@
             <a href="https://www.shiksha.com/bba/ranking/top-bba-colleges-in-india/93-2-0-0-0" target="_blank">Refer here for top BBA colleges in India</a>
         </li>
         <li>
-            <a href="http://127.0.0.1:3000/BBA.html" target="_blank">Here's a RoadMap</a>
+            <a href="https://harshikaaaaaa.github.io/CareerNavigator/BBA.html" target="_blank">Here's a RoadMap</a>
         </li>
     </div>
     <div>
@@ -58,7 +58,7 @@
                 <a href="https://www.shiksha.com/humanities-social-sciences/economics/colleges/b-a-colleges-india" target="_blank">Refer here for top BA in Economics colleges in India</a>
             </li>
             <li>
-                <a href="http://127.0.0.1:3000/BA.html" target="_blank">Here's a RoadMap</a>
+                <a href="https://harshikaaaaaa.github.io/CareerNavigator/BA.html" target="_blank">Here's a RoadMap</a>
             </li>
     </div>
 
@@ -72,7 +72,7 @@
         <a href="https://www.shiksha.com/humanities-social-sciences/political-science/colleges/b-a-colleges-india" target="_blank">Refer here for top BA in Political Science colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/baec.html" target="_blank">Here's a RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/baec.html" target="_blank">Here's a RoadMap</a>
     </li>
     </div>
 
@@ -86,7 +86,7 @@
         <a href="https://www.shiksha.com/humanities-social-sciences/history/colleges/b-a-colleges-india" target="_blank">Refer here for top BA in History colleges in India </a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bahis.html" target="_blank">Here's a RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bahis.html" target="_blank">Here's a RoadMap</a>
     </li>
     </div>
 
@@ -99,7 +99,7 @@
         <a href="https://www.shiksha.com/hospitality-travel/colleges/bhm-college-india" target="_blank">Refer here for top BHM colleges in India </a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bhm.html" target="_blank">Here's a RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bhm.html" target="_blank">Here's a RoadMap</a>
     </li>
     </div>
 
@@ -113,7 +113,7 @@
                 <a href="https://www.shiksha.com/law/colleges/b-a-ll-b-colleges-india" target="_blank">Refer here for top BAllb colleges in India</a>
             </li>
             <li>
-                <a href="http://127.0.0.1:3000/llb.html" target="_blank">Here's a RoadMap</a>
+                <a href="https://harshikaaaaaa.github.io/CareerNavigator/llb.html" target="_blank">Here's a RoadMap</a>
             </li>
     </div>
 
@@ -128,7 +128,7 @@
     </li>
     </div>
     <li>
-         <a href="http://127.0.0.1:3000/bca.html" target="_blank">Here's a RoadMap</a></li>
+         <a href="https://harshikaaaaaa.github.io/CareerNavigator/bca.html" target="_blank">Here's a RoadMap</a></li>
     <div>
         <h3>10. B.Ed. (Bachelor of Education)</h3>
 
@@ -139,7 +139,7 @@
         <a href="https://www.shiksha.com/teaching-education/colleges/b-ed-colleges-india" target="_blank">Refer here for top BEd colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/BEd.html" target="_blank">Here's a RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/BEd.html" target="_blank">Here's a RoadMap</a>
     </li>
     </div>
 
@@ -153,7 +153,7 @@
         <a href="https://www.shiksha.com/arts-fine-visual-performing/colleges/bfa-colleges-india" target="_blank">Refer here for top BFA colleges in India</a>
     </li>
     <li>
-        <a href="http://127.0.0.1:3000/bfa.html" target="_blank">Here's a RoadMap</a>
+        <a href="https://harshikaaaaaa.github.io/CareerNavigator/bfa.html" target="_blank">Here's a RoadMap</a>
     </li>
     </div>
 </body>
